[project]
name = "lmzoo"
version = "0.1.0"
description = "A collection of popular Hugging Face models ported to JAX/Flax NNX."
authors = [{ name = "Abdoul Majid O. Thiombiano" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chex>=0.1.91",
    "datasets>=4.1.1",
    "einops>=0.8.1",
    "flax>=0.12.0",
    "grain>=0.2.12",
    "hydra-core>=1.3.2",
    "jax>=0.7.2",
    "matplotlib>=3.10.6",
    "optax>=0.2.6",
    "orbax>=0.1.9",
    "tensorboard>=2.20.0",
    "tensorflow>=2.20.0",
    "transformers>=4.56.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "xprof>=2.20.6",
]
